Thu May 16 13:05:13 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* The nickname argument to watch notify can be optional.
	  Fixes a crash in server.  Affected file silcd/packet_send.c.

	* Remove the client entry from cache if the WATCH notify type
	  is KILLED, SERVER_SIGNOFF or SIGNOFF.  Affected file is
	  lib/silcclient/client_notify.c.

Wed May 15 19:01:42 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Merged with Irssi CVS for Irssi SILC client.

Tue May 14 19:37:48 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Completed the protocol specifications.

Tue May  7 20:41:58 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Merged with Irssi CVS for Irssi SILC client.

Tue May  7 11:07:16 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added the founder's public key delivery to the
	  CUMODE_CHANGE notify type as well.  Updated the protocol
	  specs and the code.  Affected files are silcd/packet_send.[ch],
	  silcd/packet_receive.c and silcd/command.c.

Mon May  6 19:46:12 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added silc_pkcs_public_key_copy function into the
	  lib/silccrypt/silcpkcs.[ch].

	* Remove the `iv' from the SilcChannelEntry since we can
	  live without it.  Affected files are silcd/idlist.h and
	  silcd/packet_receive.c.

	* Added support for sending the founder's public key in
	  the CMODE_CHANGE notify packet in the server.  Affected
	  files are silcd/packet_send.[ch], silcd/packet_receive.c,
	  silcd/command.c and silcd/server.c.

	* Changed the FOUNDER_AUTH authentication to use only
	  public key authentication as defined by new protocol
	  specs.  Passphrase authentication with that mode cannot
	  be used anymore.  It is now possible to reclaim founder
	  mode from any server in the network.  Affected files are
	  silcd/command.c, silcd/idlist.h and silcd/command_reply.c.

	* Added permanent channels support by making the channel
	  permanent when FOUNDER_AUTH mode is set on the channel.